SERVER-57649 DDL coordinator dist lock acquisition must be resilient to CSRS stepdowns

(cherry picked from commit fc1ea44740c05ab73ce0bcf8a1897aa322b1d057)